--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "build:component": "webpack --config build/webpack.component.js",
     "dev": "npm run build:file && cross-env NODE_ENV=development webpack-dev-server --config build/webpack.demo.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:mademadedeni/vue2-plugins.git"
+  },
+  "homepage": "https://github.com/mademadedeni/vue2-plugins",
   "keywords": [
     "vue"
   ],
